--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -1,4 +1,11 @@
 apply plugin: 'com.android.library'
+apply plugin: 'maven-publish'
+
+ext {
+    PUBLISH_GROUP_ID = 'com.asa.systemuihelper'
+    PUBLISH_ARTIFACT_ID = 'systemuihelper'
+    PUBLISH_VERSION = '1.0.0'
+}
 
 android {
     compileSdkVersion 20
@@ -22,3 +29,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
+
+apply from: 'bintray_upload.gradle'
